{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0c839146-5bd2-453e-a2ef-cfc1cba99cf6",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "1fbfd838-0a99-4a19-b954-ca7187237848",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerUp",
                    "type": "Button",
                    "id": "6ea83205-7e82-45f9-9262-056bd523ebc0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerDown",
                    "type": "Button",
                    "id": "b868c1bd-b527-4df9-acad-5ccb21120cd3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerRight",
                    "type": "Button",
                    "id": "a8322380-d0df-441a-84c7-69d166d6b4b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerLeft",
                    "type": "Button",
                    "id": "05a12bd8-72d4-4eb1-85a9-4948a45ec0b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerInterract",
                    "type": "Button",
                    "id": "6bd0b653-4f88-49ac-8272-60e208722283",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "37e5605f-40a4-4e0c-b3d5-0e36f122587c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "244a507d-bc29-44b2-9e8e-a26ccce23a48",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa756e28-8b1a-4f88-9ccf-6ee73e71fbdf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34d08736-0a3b-497b-84b0-fb9a23aa4d44",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfff1918-dc58-4cbd-8caa-739c831ec137",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "046d7492-33a5-493f-8b21-dd0263c7583e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerInterract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}